[gd_scene load_steps=2 format=3 uid="uid://b1twuxybp05p3"]

[ext_resource type="Script" uid="uid://drtpqc5q2m3ph" path="res://scenes/menu/main_menu.gd" id="1_nl8w3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nl8w3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.19076231, 0.19076234, 0.19076231, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(500, 300)
layout_mode = 0
offset_left = 139.0
offset_top = 136.0
offset_right = 639.0
offset_bottom = 436.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="game tittle" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
text = "GAME TITTLE"

[node name="buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="BtnPlay" type="Button" parent="MarginContainer/VBoxContainer/buttons"]
layout_mode = 2
text = "Start"

[node name="BtnCredits" type="Button" parent="MarginContainer/VBoxContainer/buttons"]
layout_mode = 2
text = "Credits"

[node name="BtnExit" type="Button" parent="MarginContainer/VBoxContainer/buttons"]
layout_mode = 2
text = "Exit game"

[node name="selector" type="Label" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 232.0
offset_right = 156.0
offset_bottom = 255.0
text = "â–¶"
